curl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: byrnedo/alpine-curl
        command:
        - /bin/sh
        args:
        - -c
        - "while true; do sleep 1; done"
