dnsutils-daemonset.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: default
spec:
  containers:
  - name: dnsutils
    image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dnsutils
spec:
  selector:
    matchLabels:
      name: dnsutils
  template:
    metadata:
      labels:
        name: dnsutils
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: dnsutils
        image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
        command:
        - sh
        - -c
        - "while true; do nslookup kubernetes.default && sleep 5; done"
