ubuntu-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-debug
  labels:
    app: ubuntu-debug
spec:
  containers:
  - name: ubuntu
    image: ubuntu:18.04
    command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
