nginx-deployment-with-service-and-readiness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ['sh', '-c', "echo 1 > /tmp/healthy"]
          preStop:
            exec:
              command: ['sh', '-c', "rm /tmp/healthy && sleep 60"]
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerSourceRanges:
  - 175.0.0.0/8
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
