nginx-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nginx
subsets:
  - addresses:
    - ip: 192.0.2.42
    ports:
    - port: 9376
