tcp-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-server
  labels:
    app: tcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-server
  template:
    metadata:
      labels:
        app: tcp-server
    spec:
      containers:
      - name: tcp-server
        image: andrewsykim/go-echo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 1025

---
apiVersion: v1
kind: Service
metadata:
  name: tcp-server
  labels:
    app: tcp-server
spec:
  selector:
    app: tcp-server
  ports:
  - port: 80
    targetPort: 1025
    protocol: TCP
